--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -39,8 +39,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'form-elements';
     });
 
-    page('/ui-elements', scrollToTop, function() {
-      app.route = 'ui-elements';
+    page('/typo', scrollToTop, function() {
+      app.route = 'typo';
+    });
+
+    page('/buttons', scrollToTop, function() {
+      app.route = 'buttons';
+    });
+
+    page('/ui-other', scrollToTop, function() {
+      app.route = 'ui-other';
     });
 
     page('/maps', scrollToTop, function() {
