--- a/app/elements/widgets/pa-toggle-buttons.html
+++ b/app/elements/widgets/pa-toggle-buttons.html
@@ -5,8 +5,8 @@
     <style include="shared-styles"></style>
     <style>
       .line {
-        margin-bottom: 40px;
         min-width: 150px;
+        padding: 24px 0;
       }
 
       .line span {
