feat(auth): add google authentication with firebase

--- a/app/elements/widgets/pa-todo/pa-todo-model.html
+++ b/app/elements/widgets/pa-todo/pa-todo-model.html
@@ -14,8 +14,8 @@
           items: {
             type: Array,
             notify: true
-          },
-          filter: String
+          }
+          //filter: String
         },
 
         initializeDefaultTodos: function() {
