--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <span id="browser-sync-binding"></span>
 <template is="dom-bind" id="app">
 
+  <pa-login location='{{location}}'></pa-login>
+
   <paper-scroll-header-panel fixed>
 
     <paper-toolbar class="top-toolbar">
@@ -68,6 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <span class="flex"></span>
       <paper-icon-button icon="refresh" class="refresh-icon"></paper-icon-button>
       <pa-search></pa-search>
+      <pa-auth-info location='{{location}}'></pa-auth-info>
     </paper-toolbar>
 
     <paper-drawer-panel id="paperDrawerPanel">
