--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -75,3 +75,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="pages/pa-ui-other.html">
 <link rel="import" href="pages/pa-typo.html">
 <link rel="import" href="pages/pa-user-profile.html">
+
+<link rel="import" href="components/auth/pa-login.html">
+<link rel="import" href="components/auth/pa-auth-info.html">
