feat(todo list): save each user todo list in firebase

--- a/app/elements/pages/pa-dashboard.html
+++ b/app/elements/pages/pa-dashboard.html
@@ -79,7 +79,7 @@
       <div>
         <paper-material class="widget" elevation="1">
           <h3>Todo List</h3>
-          <pa-todo></pa-todo>
+          <pa-todo todos="{{todos}}"></pa-todo>
         </paper-material>
       </div>
     </pa-simple-grid>
