--- a/app/elements/widgets/pa-todo/pa-todo.html
+++ b/app/elements/widgets/pa-todo/pa-todo.html
@@ -9,8 +9,7 @@
     <style include="shared-styles"></style>
     <style></style>
 
-    <pa-todo-model id="todo-model" items="{{todos}}"></pa-todo-model>
-    <pa-todos items="{{todos}}"></pa-todos>
+    <pa-todos todos="{{todos}}"></pa-todos>
   </template>
 
   <script>
