fix(jshint, db): fix jshint errors, db restructure

--- a/app/elements/pages/pa-dashboard.html
+++ b/app/elements/pages/pa-dashboard.html
@@ -100,7 +100,7 @@
         },
 
         ready: function() {
-          this.$.feeder.feeds = ['http://blog.polymer-project.org/feed.xml'];
+          this.$.feeder.feed = 'http://blog.polymer-project.org/feed.xml';
         }
       });
     })();
