--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -86,6 +86,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     padding: 0 16px;
   }
 
+  paper-menu a[hide] {
+    display: none;
+  }
+
   .toggle-drawer {
     margin-left: 16px;
   }
