feat(profile picture): change profile picture functionality,fix modals, change dashboard widgets order

--- a/app/elements/pages/pa-user-profile.html
+++ b/app/elements/pages/pa-user-profile.html
@@ -28,11 +28,12 @@
     </style>
 
     <pa-simple-grid>
+
       <div>
         <paper-material class="widget" elevation="1">
           <h3>General Information</h3>
 
-          <pa-profile-picture src="{{ profile.picture }}"></pa-profile-picture>
+          <pa-profile-picture profile="{{profile}}"></pa-profile-picture>
 
           <pa-simple-grid md-cols="2">
             <div>
