--- a/app/index.html
+++ b/app/index.html
@@ -180,7 +180,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <section data-route="user-profile">
             <pa-widget-title title="User Profile" cols='{{cols}}'></pa-widget-title>
-            <pa-user-profile cols='{{cols}}' user="{{user}}" profile="{{profile}}"></pa-user-profile>
+            <pa-user-profile cols='{{cols}}' profile="{{profile}}"></pa-user-profile>
           </section>
 
         </iron-pages>
