fix(todo list): show todo list to authorized users only, otherwise ask user to sign in

--- a/app/elements/pages/pa-dashboard.html
+++ b/app/elements/pages/pa-dashboard.html
@@ -55,7 +55,7 @@
       <div>
         <paper-material class="widget" elevation="1">
           <h3>Todo List</h3>
-          <pa-todo todos="{{todos}}"></pa-todo>
+          <pa-todo todos="{{todos}}" user="{{user}}"></pa-todo>
         </paper-material>
       </div>
       <div>
