--- a/app/index.html
+++ b/app/index.html
@@ -140,7 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <section data-route="dashboard">
             <pa-widget-title title="Dashboard" cols='{{cols}}'></pa-widget-title>
-            <pa-dashboard cols='{{cols}}' todos="{{todos}}"></pa-dashboard>
+            <pa-dashboard cols='{{cols}}' todos="{{todos}}" user="{{user}}" on-sign-in="signIn"></pa-dashboard>
           </section>
 
           <section data-route="charts">
