feat(about): add about widget, add footer, remove youtube video

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -53,7 +53,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Google elements -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
-<link rel="import" href="../bower_components/google-youtube/google-youtube.html">
 <link rel="import" href="../bower_components/google-feeds/google-feeds.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/google-map/google-map-marker.html">
@@ -101,3 +100,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="components/auth/pa-auth-data.html">
 <link rel="import" href="components/auth/pa-auth-info.html">
+
+<link rel="import" href="components/pa-footer.html">
+<link rel="import" href="widgets/pa-about.html">
