--- a/app/elements/pages/pa-dashboard.html
+++ b/app/elements/pages/pa-dashboard.html
@@ -66,16 +66,11 @@
           </div>
         </paper-material>
       </div>
+
       <div>
         <paper-material class="widget" elevation="1">
-          <h3>Awesome Video</h3>
-          <google-youtube
-              video-id="jVn8tlnwAEs"
-              height="270px"
-              width="480px"
-              rel="0"
-              autoplay="0">
-          </google-youtube>
+          <h3>About Polymer Admin</h3>
+          <pa-about></pa-about>
         </paper-material>
       </div>
     </pa-simple-grid>
