--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </a>
 
           <a data-route="user-profile" href="/user-profile" on-click="onDataRouteClick" hide$="{{!user}}">
-            <iron-icon icon="accessibility"></iron-icon>
+            <iron-icon icon="account-box"></iron-icon>
             <span>User Profile</span>
           </a>
 
@@ -184,6 +184,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </section>
 
         </iron-pages>
+
+        <pa-footer></pa-footer>
       </paper-scroll-header-panel>
 
     </paper-drawer-panel>
