--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -32,6 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --secondary-text-color: #727272;
     --disabled-text-color: #bdbdbd;
     --divider-color: #B6B6B6;
+    --default-text-color: #444444;
 
     /* Components */
 
