feat(toast): add toast notifications to show that profile informations is saving to firebase db, fix footer layout

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -147,7 +147,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   }
 
   iron-pages {
-    padding: 24px 16px;
+    padding: 24px 16px 56px;
+    min-height: 100%;
+    box-sizing: border-box;
   }
 
   h1 a {
@@ -165,7 +167,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Desktop + */
   @media (min-width: 640px) {
     iron-pages {
-      padding: 24px 36px;
+      padding: 24px 36px 56px;
     }
   }
 
